welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^FlowerPot:11: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^FlowerPot:13: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^FlowerPot:15: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^FlowerPot:17: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^